--- a/hw11/index.html
+++ b/hw11/index.html
@@ -197,7 +197,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      這次的遊戲實在是非常的好玩，玩boolean遊戲實在是非常的燒腦，在玩color的遊戲眼睛真的是看到快壞掉，因為要在時間內找到相對應的顏色實在是難，而在玩kern時對位置和bezier的畫線倒是比較簡單，但是shape的關卡實在是看不懂要做甚麼，因為裡面有些字連看都沒看過，也是示了很多次才好不容易通過。
+      這次的遊戲實在是非常的好玩，玩boolean遊戲實在是非常的燒腦，在玩color的遊戲眼睛真的是看到快壞掉，因為要在時間內找到相對應的顏色實在是難，而在玩kern時對位置和bezier的畫線倒是比較簡單，但是shape的關卡實在是看不懂要做甚麼，因為裡面有些字連看都沒看過，也是試了很多次才好不容易通過。
     </div>
   </div>
 
