--- a/hw10/index.html
+++ b/hw10/index.html
@@ -185,7 +185,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      透過手寫了一萬多個字，真是一段漫長而辛苦的書寫之旅。這個過程讓我深深感受到文字的束縛和書寫的無聊，但是寫完之後體會到了書寫的價值和樂趣，它不僅是一種表達自我的方式，同時也是一種與文字深度連結的體驗。
     </div>
   </div>
 
@@ -201,7 +201,7 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>8</td>
           <td>Simple baseline - 完成 138 頁稿紙書寫 (製作個人手寫體 ttf、放在 hw10 作品集 + 計算誰的字與你的字最像，提供程式碼 + 上台報告)</td>
         </tr>
@@ -211,7 +211,7 @@
           <td>Medium baseline - 成功切割成 13759 張 png </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>1</td>
           <td>Strong baseline - 打包成字型檔 </td>
         </tr>
