--- a/hw10/final.html
+++ b/hw10/final.html
@@ -55,7 +55,7 @@
 
 		body {
 			writing-mode: vertical-rl;
-			font-family: 'BpmfZihiKaiStd-Regular', serif; /* BpmfZihiKaiStd.zip : 字嗨注音標楷 */
+			font-family: 'CircleFont', serif; /* BpmfZihiKaiStd.zip : 字嗨注音標楷 */
 			line-height: 3.5em;
 		}
 
